CSS/summer.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
        
html * {
     font-family: 'Open Sans';
}

/************** Begin Nav Bar **************/



#rbgnavbar a:hover, a, li, .dropdown-menu li:hover {
    color: #000000;
}

.dropdown-menu li:hover {
	background-color: #F2EDE4;
	color: #000000;
}

.dropdown > li {
	background-color: white;
}

.dropdown {
	padding: 0;
}

/* Main dropdown menu items change cover when selected/clicked */
.dropdown-toggle:active, .open .dropdown-toggle, .dropdown:hover {
	background-color: #196143 !important;

}


.dropdown-menu li, .dropdown-menu a {
	text-align: center;
	color: #000000;
}

.dropdown {
	font-size: 10px;
	padding: 0;
	font-weight: bold;
}

.rbgwhitelink {
	color: #FFFFFF;
}

.dropdown ul {
	padding-top: 0px;
	padding-bottom: 0px;
	font-size: 10px;
	font-weight: bold;
}

/* Border thickness and color between dropdown menu li, padding */
.dropdown-menu li {
	border-top: 2px double #D3D3D3;
	padding-top: 5px;
	padding-bottom: 5px;
}

/* Background color of li in navbar when hovered over */
.dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a, .dropdown-menu li:hover {
	background-color: #F2EDE4;
}

/* Makes dropdown-menu li links bold*/
.dropdown-menu li > a, .dropdown-menu li > a:visited {
	font-weight: bold;
}

#navbarbg {
	background-color: #00502F;
	width: 100%;
}

#rbgnavbar {
	max-width: 1400px;
	margin-left:auto;
	margin-right:auto;
	background-color:#00502F;
}

#logo {
	padding-top: 13px;
}

#logo img {
	max-width: 202px;
	width: 100%;
	max-height: 23px;
}

#logo img:hover {
	opacity: .9;
}

.nav-button {
	clear: none;
	margin-left: auto;
	margin-right: auto;
	float: right;
}

.nav-button img {
	max-height: 50px;
	max-width: 50px;
}

.nav-button img:hover {
	opacity: .9;
}

/* Adjusts width of dropdown menu */
.dropdown-menu a, .dropdown-menu li {
  min-width: 150px;
}

/* Adjusts center alignment of dropdown menu under main categories */
.dropdown-menu {
    left: 50% !important;
    margin-left: -78px;
}

/*  Begin Search Bar */

form {
	width: 100px;
}

.search { 
	padding:3px 15px 3px 22px;
	margin:3px; 
	background: url('../images/search.png') no-repeat 8px 3px;
	background-size: 12px 12px;
	background-repeat: no-repeat;
	width: 135px;
	
}

.rounded { 
	border-radius:15px; 
	/* -moz-border-radius:15px; 	*/
	/* -webkit-border-radius:15px; 	*/
}

input[type=text]{
	color: #00502F;
	font-size: 9px;
}

.rbgsearch { 
	padding-top: 12px;
	float: left;
		/* div containing search form 
	width:95%;
	height: 50px;
	padding: 40px 25px;
		*/
}

.rbgsearch input[type=text]{
	border: 1px solid #acb1b7;
	background-color :#FFFFFF;
}

/* End Search Bar */


/************************/
/* Begin Search Bar CSS */
/************************/



/************************/
/** End Search Bar CSS **/
/************************/

/*****************************************/
/************** End Nav Bar **************/
/*****************************************/

/************************/
/** Begin RBG Info Div **/
/************************/

#rbginfobg {
	background-color: #000000;
	opacity: 1;
	width: 100%;
}

#rbginfo {
	max-width: 1400px;
	margin: 0 auto 0 auto;
	color: #FFFFFF;
}

#rbghours {
	background-color: red;
	text-align: center;
	font-size: 10px;
}

#rbgadmission {
	background-color: purple;
	font-size: 8px;
	font-family: 'Open Sans';
}

#rbgadmission table {
	margin-left: auto;
	margin-right: auto;
}

.td-title{
	font-size: 10px;
	padding-top: 5px;
	padding-bottom: 5px;
}

.td-padding {
	padding-left: 5px;
}

.td-final1 {
	padding-bottom: 5px;
}

.td-final2 {
	padding-left: 5px;
	padding-bottom: 5px;
}

#admission-left, #admission-right {
	float: left;
}

#rbgdirections {
	background-color: blue;
	
}

#rbgdirections img {
	display: block;
	margin: 0 auto 0 auto;
	width: 137px;
	height: 84px;
}

#rbgdirections img:hover {
	opacity: .9;
}

#rbgweather {
	background-color: green;
}

#rbgweather img {
	display: block;
	margin: 0 auto 0 auto;
	width: 137px;
	height: 84px;
}

#rbgweather img:hover {
	opacity: .9;
}

/* End RBG Info Div */

/* Begin Main Body */

#rbgbody {
	max-width:1400px;
	margin: 0 auto 0 auto;	
}

#rbgbody h1, h2, h3, p {
	padding-left: 5px;
	padding-right: 5px;
}

/*************************************************************/
/*********************** Footer CSS **************************/
/*************************************************************/

/*** Begin Pre-Footer ***/

#prefooterbg {
	background-color: #F2EDE4;
	width: 100%;
	border-top: 1px solid #000000;
	border-bottom: 1px solid #2E7258;
}

#prefooter {
	max-width: 1400px;
	margin: 0 auto 0 auto;
}

#infoempty1, #infoempty2, #empty1, #empty2 {
	line-height: 1px;
}

#prefooter img{
	display: block;
	margin: 10px auto 10px auto;
	width: 166px;
	height: 90px;
}

#prefooter img:hover {
	background-color: #FBF9F6;
	
}


/*** End Pre-Footer ***/

/*** Begin Footer ***/

#rbgfooterbg {
	background-color: #00502F;
	width: 100%;
}

#rbgfooter {
  max-width: 1400px;
  margin: 0 auto 0 auto;
  background-color:#00502F;
}

#rbgfooterlinks {
	font-size: 70%;
	text-align: center;
	clear: both;
	color: white;
	font-weight: bold;
}


#rbgfooterlinks a:link, a:visited, a:active {
	color: #FFFFFF;
	font-weight: bold;
	text-decoration: none;
}

#rbgfooterlinks a:hover {
	color: #C4B59E;
}

#social-media-wrapper {
	margin-left: auto;
	margin-right: auto;
	max-width: 1400px;
}

.social-media {
    margin-left: auto;
    margin-right: auto;
    max-width: 610px;
}

.social-media img {
	width: 39px;
	height: 39px;
	margin: 0px 11px 4px 11px;
	float: left;
}

/*
.social-media img:hover {
	background-color: #2F7055;
}
*/

#uofu {
	background-color: #00502F;
	padding-top: 44px;
}

#uofu img {
	display: block;
    margin: 0 auto 0 auto;
	width: 179px;
	height: 44px;
	vertical-align: bottom;
}

#footerlogo {
	background-color: #00502F;
	padding-top: 15px;
}

#footerlogo img {
	display: block;
    margin-left: auto;
    margin-right: auto;
	width: 169px;
	height: 73px;
}

#zap {
	background-color: #00502F;
	padding-top: 17px;
}

#zap img {
	display: block;
    margin: 0 auto 0 auto;
    width: 170px;
    height: 71px;
}

#uofu img:hover, #footerlogo img:hover, #zap img:hover {
	opacity: .9;
}

.space hr {
	height: 4px;
	visibility: hidden;
	margin: 0px;
}

#contactinfo1 {
	text-align: center;
	color: #FFFFFF;
	font-size: 86%;
}

#contactinfo2 {
	text-align: center;
	color: #F2EDE4;
	font-size: 71%;
	font-style: italic;
}

/*** End Footer ***/

/*************************************************************/
/**************** End Footer CSS *****************************/
/*************************************************************/

/* Added to make Bootstrap row divs with pictures the same height  */

.row {
    overflow: hidden; 
}

[class*="col-"]{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

/*** End Bootstrap Change ***/

